Fixes SimpleEntityCard icon spacing.

--- a/domains/rem/src/ui/generatedDates/styles.scss
+++ b/domains/rem/src/ui/generatedDates/styles.scss
@@ -27,7 +27,7 @@
 		}
 	}
 
-	&__trash {
+	&__icon {
 		display: inline-block;
 		font-size: var(--ee-font-size-bigger);
 		margin: 0 0 0 var(--ee-margin-big);
